2A/05_Projet_GL/src/test/deca/codegen/invalid/sansObjet/06_div_zero_arith.deca
// Description:
//    Programme avec division par 0 calculé
// Resultats:
//    Erreur : Division par zero
//
// Historique:
//    cree le 10/1/2024

{
    int x = 5/ (4-4);
    println(x);
}